# flatscraper

./: .env.example  .gitignore  README.md  config.py  groq_client.py  login.py  models.py  pyproject.toml  run.py  setup_wizard.py
.github/workflows/: publish.yml
tests/: __init__.py  test_config.py  test_groq_client.py  test_models.py  test_search.py
