[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flatscraper"
version = "0.1.1"
description = "Multi-platform flat search automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/lukasthekid/flatscraper"
Repository = "https://github.com/lukasthekid/flatscraper"

[tool.setuptools.packages.find]
where = ["."]
include = ["platforms*"]

[tool.setuptools]
py-modules = ["config", "groq_client", "models", "run", "setup_wizard"]

[project.scripts]
flatscraper = "run:main"
setup = "setup_wizard:run_setup"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
